@@ -1,3 +1,7 @@
+* Fri Sep 11 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.1-0
+- Add controls, identifiers, and oval-ids
+- Work around rspec failure
+
 * Mon Jun 22 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 3.1.0-0
 - Deep merge hash values in the Hiera backend
 - Reduce the amount of data passed around in the Hiera backend
